# Movie_API

./: .env.template  Dockerfile  README.md  commands.http  docker-compose.yml  main.py  pyproject.toml
app/: database.py
app/methods/: route_helpers.py  routes_class.py  sql_alchemy_crud.py
app/models/: movie.py
app/routes/: movie.py  ratings.py
app/schemas/: base.py  responses.py
tests/: conftest.py  test_movie_routes.py  test_ratings.py
