[tool.poetry]
name = "Movie-App"
version = "0.1.0"
description = "A simple movie app using FastAPI and SQLAlchemy"
authors = ["Feyaaz <feyaazc94@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.92.0"
uvicorn = "^0.20.0"
sqlalchemy = "^2.0.4"
psycopg2 = "^2.9.5"
psycopg2-binary = "^2.9.5"
black = "^23.1.0"
isort = "^5.12.0"
python-dotenv = "^0.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
