[tool.poetry]
name = "Movie-App"
version = "0.1.0"
description = "A simple movie app using FastAPI and SQLAlchemy"
authors = ["Feyaaz <feyaazc94@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.1"
uvicorn = "^0.30.1"
pydantic = "^2.8.2"
requests = "^2.32.3"
sqlalchemy = "^2.0.31"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
httpx = "^0.27.0"
pytest = "^8.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
